<resources>
    <string name="app_name">Fake Chat</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="confirm">Confirm</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="agree_dialog">Agree</string>
    <string name="add_record">Add Record</string>
    <string name="ok">Ok</string>
    <string name="edit">Edit</string>
    <string name="support_tool">Support tools</string>
    <string name="screen_shot">Take a screenshot</string>
    <string name="delete_chat">Refresh the chat</string>
    <string name="back_to_home">Back to home page</string>
    <string name="font_italic" translatable="false">fonts/Roboto-BlackItalic.ttf</string>
    <string name="font_bold" translatable="false">fonts/Roboto-Bold.ttf</string>
    <string name="font_regular" translatable="false">fonts/Roboto-Regular.ttf</string>
    <string name="font_black" translatable="false">fonts/Roboto-Black.ttf</string>
    <string name="font_medium" translatable="false">font/Roboto-Medium.ttf</string>
    <string name="font_payone" translatable="false">fonts/payone.ttf</string>
    <string name="font_carterone" translatable="false">fonts/carterone_regular.ttf</string>
    <string name="font_calistoga" translatable="false">fonts/Calistoga-Regular.ttf</string>
    <string name="font_baloo" translatable="false">fonts/Baloo-Regular.ttf</string>
    <string name="txt_language_in" translatable="false">Indonesian</string>
    <string name="txt_language_thai" translatable="false">Thai</string>
    <string name="txt_language_malay" translatable="false">Malaysian</string>
    <string name="txt_language_en">English</string>
    <string name="txt_language_vi">Vietnamese</string>
    <string name="txt_language_spanish">Spanish</string>
    <string name="txt_language_portuguese">Portuguese</string>
    <string name="txt_language_russiane">Russian</string>
    <string name="txt_language_ja">Japanese</string>
    <string name="txt_language_korean">Korean</string>
    <string name="txt_language_french">French</string>
    <string name="txt_language_german">German</string>
    <string name="txt_language_arabic" translatable="false">Arabic</string>
    <string name="txt_language_chi">Chinese</string>
    <string name="txt_language_chinese_Simplified" translatable="false">Chinese (Simplified )</string>
    <string name="txt_language_chinese_Traditional" translatable="false">Chinese (Traditional)</string>
    <string name="flag_name_english">English</string>
    <string name="flag_name_japanese">Japanese</string>
    <string name="flag_name_chiness">Chinese</string>
    <string name="flag_name_indonesian">Indonesian</string>
    <string name="flag_name_rusian">Russian</string>
    <string name="flag_name_spanish">Spanish</string>
    <string name="flag_name_french">French</string>
    <string name="flag_name_portugese">Portuguese</string>
    <string name="flag_name_korean">Korean</string>
    <string name="flag_name_vietnamese">Vietnamese</string>
    <string name="flag_name_german">German</string>
    <string name="content_about_app">
Questions or feedback? We read every single email
Have suggestions? Please, feel free to reach us at support@realink.dev
"</string>
    <string name="save">Save</string>
    <string name="loading_ads_text">Loading ads...</string>
    <string name="facebook_app_id" translatable="false">1105959933462571</string>
    <string name="google_admob_app_id" translatable="false">ca-app-pub-2597972375786066~7367606821</string>
    <string name="make_video_call">Fake\nVideo Call</string>
    <string name="make_message">Fake\nMessage</string>
    <string name="make_message_title">Make Message</string>
    <string name="make_notification">Fake\nNotification</string>
    <string name="make_notification_title">Make Notification</string>
    <string name="make_voice_call">Fake\nVoice Call</string>
    <string name="make_voice_call_title">Make Voice Call</string>
    <string name="title_make_video_call">Make Video Call</string>
    <string name="call_now">Call Now</string>
    <string name="call_type">Call type</string>
    <string name="notification_type">Notification type</string>
    <string name="incoming_call">Incoming call</string>
    <string name="incoming_call_later">Incoming call later:</string>
    <string name="top">Top</string>
    <string name="popup">Popup</string>
    <string name="calling">Calling</string>
    <string name="name_your_friend">Name</string>
    <string name="education">Education</string>
    <string name="education_hint">ex: Student at Harvard University</string>
    <string name="work">Work</string>
    <string name="work_hint">ex: Soccer in Saudi Pro League</string>
    <string name="live">Live</string>
    <string name="live_hint">ex: Live in New York City</string>
    <string name="lives_in">Lives In</string>
    <string name="personal_info">Type</string>
    <string name="message">Messenger</string>
    <string name="operation_status">Operation Status</string>
    <string name="change_avatar">Change Profile Picture</string>
    <string name="hint_text_name">Type contact name</string>
    <string name="guide">Guide</string>
    <string name="note">Note</string>
    <string name="select_language">Select language</string>
    <string name="time_delay">Time Delay</string>
    <string name="dialog_description_time_delay">Is the countdown time to show the fake incoming call</string>
    <string name="get_a_call_now">Get a call now</string>
    <string name="five_seconds_later">5 seconds later</string>
    <string name="ten_seconds_later">10 seconds later</string>
    <string name="fifteen_seconds_later">15 seconds later</string>
    <string name="twenty_seconds_later">20 seconds later</string>
    <string name="recommend">Recommend</string>
    <string name="choose_interface_color">Choose interface color</string>
    <string name="your_chat_bubble_display_color">Your chat bubble display color</string>
    <string name="close">Close</string>
    <string name="ok_dialog">OK</string>
    <string name="title_privacy">Demo text heading privacy</string>
    <string name="content_privacy">
This SERVICE is provided by Us at no cost and is intended for use as is.
This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
If you choose to use my Service, then you agree to the collection and use of information in relation to this policy.
The Personal Information that I collect is used for providing and improving the Service.I will not use or share your information with anyone except as described in this Privacy Policy.
- Images: We are not responsible for the image content created by users or searched on the internet.
- Stories: User-generated stories in the app for political, offensive, or deceptive purposes.
- We are not responsible when users of the application for malicious purposes, political purposes, vote, and violate applicable national laws.

1. Information Collection and Use
For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information.The information that I request will be retained on your device and is not collected by me in any way.
The app does use third party services that may collect information used to identify you.
Links to the privacy policies of third party service providers can be used in the app

2. Log Data
I want to inform you that whenever you use my Service, in case of an error in the app I collect data and information (through third party products) on your phone called Log Data.
This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.

3. Cookies
Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers.
These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.
This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services.
You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.


4. Service Providers

The permissions we use in the application:
android.permission.WRITE_EXTERNAL_STORAGE

android.permission.READ_EXTERNAL_STORAGE

android.permission.WAKE_LOCK

android.permission.VIBRATE

android.permission.INTERNET

android.permission.ACCESS_NETWORK_STATE

android.permission.RECEIVE_BOOT_COMPLETED

NOTE:
- We are committed to using the above rights only for the purpose of serving the function of the application and fully comply with the policies of google play and not for any other purpose.

- All information provided by users will only be stored on their device and we do not collect and store it in any form (including on servers or on cloud services…).

- We do not disclose, store or share any sensitive information of users (email, bank account…).

5. Service Providers
I may employ third-party companies and individuals due to the following reasons:
To facilitate our Service;
To provide the Service on our behalf;
To perform Service-related services;
To assist us in analyzing how our Service is used.
I want to inform users of this Service that these third parties have access to your Personal Information.
The reason is to perform the tasks assigned to them on our behalf.However, they are obligated not to disclose or use the information for any other purpose.


6. Security
I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it.
But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.

7. Links to Other Sites
This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site.
Note that these external sites are not operated by me.Therefore, I strongly advise you to review the Privacy Policy of these websites.

I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.

8. Children’s Privacy
These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13.
In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers.
If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to take necessary actions.

9. Changes to This Privacy Policy
I may update our Privacy Policy from time to time.Thus, you are advised to review this page periodically for any changes.
I will notify you of any changes by posting the new Privacy Policy on this page.These changes are effective immediately after they are posted on this page.</string>
    <string name="get_more">Get more</string>
    <string name="not_enough_points">Not enough points</string>
    <string name="not_enough_points_des">Your current point is not enough to use the function</string>
</resources>