<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_14sdp"
    android:backgroundTint="@color/white"
    android:paddingBottom="@dimen/_10sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_6sdp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <nat.pink.base.custom.view.ExtTextView
                    android:id="@+id/select_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="@string/choose_interface_color"
                    android:textColor="@color/color_212121"
                    android:textSize="@dimen/_18sdp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <nat.pink.base.custom.view.ExtTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:textViewFontAssetName="@string/font_regular"
                android:text="@string/your_chat_bubble_display_color"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/_12sdp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <nat.pink.base.custom.view.ExtTextView
                    android:id="@+id/txt_close"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_close_dialog"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_8sdp"
                    android:text="@string/close"
                    android:textColor="@color/color_1788C0"
                    android:textSize="@dimen/_14sdp" />

                <nat.pink.base.custom.view.ExtTextView
                    android:id="@+id/txt_done"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_done_dialog"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_10sdp"
                    android:text="@string/ok_dialog"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>


</RelativeLayout>