<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="50dp"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:paddingVertical="@dimen/_17sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:background="@drawable/bg_white_corner_8"
        android:orientation="vertical">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textColor="@color/color_212121"
            android:gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/ic_enought_point"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <nat.pink.base.custom.view.ExtTextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/color_FE9923"
            android:text="@string/not_enough_points"
            android:fontFamily="@font/sf_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <nat.pink.base.custom.view.ExtTextView
            android:id="@+id/tv_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/not_enough_points_des"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_time" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_msg">

            <nat.pink.base.custom.view.ExtTextView
                android:id="@+id/txt_close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_gray8"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingVertical="@dimen/_8sdp"
                android:paddingHorizontal="@dimen/_15sdp"
                android:text="@string/guide"
                android:textColor="@color/color_AF7CE4"
                android:textSize="@dimen/_14sdp" />

            <nat.pink.base.custom.view.ExtTextView
                android:id="@+id/txt_done"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_violen8"
                android:gravity="center"
                android:drawableStart="@drawable/ic_ads"
                android:paddingHorizontal="@dimen/_5sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/get_more"
                android:drawablePadding="@dimen/_2sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>