<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/_35sdp"
    android:background="@color/white"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:nestedScrollingEnabled="false"
    android:paddingBottom="@dimen/_16sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <nat.pink.base.custom.view.ExtTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/select_language"
            android:textColor="@color/black_1F"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <nat.pink.base.custom.view.ExtTextView
            android:id="@+id/txt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:drawableEnd="@drawable/ic_next_blue"
            android:drawablePadding="@dimen/_12sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/next"
            android:textColor="@color/color_4285F4"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="@id/tv_title"
            app:textViewFontAssetName="@string/font_regular" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_english"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@color/transparent"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@id/native_ads_language_home"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


<!--    <include-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginHorizontal="@dimen/_8sdp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        android:id="@+id/native_ads_language_home"-->
<!--        layout="@layout/native_custom_ads_big"/>-->
    <FrameLayout
        android:id="@+id/native_ads_language_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>